--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-dash>=3.2.0
-dash-bootstrap-components>=2.0.4
-youtube-transcript-api>=1.2.2
-requests>=2.32.5
-pandas>=2.3.3
+dash
+dash-bootstrap-components
+youtube-transcript-api
+requests
+pandas
 yt-dlp
+ollama
